# DIMEI

./: .gitignore  CLAUDE.md  README.md  export_coreml.py  voicecrm_eval_report.html
VoiceCRM/VoiceCRM/: ContentView.swift  VoiceCRMApp.swift
VoiceCRM/VoiceCRM.xcodeproj/: project.pbxproj
VoiceCRM/VoiceCRM.xcodeproj/project.xcworkspace/xcuserdata/ritapinto.xcuserdatad/: UserInterfaceState.xcuserstate
VoiceCRM/VoiceCRM/Assets.xcassets/AppIcon.appiconset/: Contents.json
VoiceCRM/VoiceCRM/SpeakerEncoder.mlpackage/: Manifest.json
VoiceCRM/VoiceCRM/SpeakerEncoder.mlpackage/Data/com.apple.CoreML/: model.mlmodel
backend/: dataset_eval_voicecrm.json  eval_crm.py  eval_modelos.py  eval_results_20260605_0112.json  eval_results_v2_20260605_0122.json  pyproject.toml  server.py  server_moshi.py  server_v4.py  test_moshi.py  test_mps.py  test_resemblyzer.py
backend/eval/: dataset_golden_v3.json  eval_crm.py  eval_modelos.py
backend/eval/results/: eval_results.json  eval_results_v3_20260608_0056.json  eval_results_v4_20260608_1705.json  eval_results_v5_20260608_1734.json
backend/metrics/: calc_der.py  calc_wer_r01.py  calc_wer_r02.py  calc_wer_r03.py  calc_wer_r04.py  calc_wer_r05.py  calc_wer_r06.py  calc_wer_r07.py  calc_wer_r08.py  calc_wer_r09.py  calc_wer_r10.py  calc_wer_r11.py  calc_wer_r12.py
backend/tests/: test_moshi.py  test_mps.py
docs/: arquitetura_geral.md  modelo_de_dados.md  pipeline.md  sequencia_interacao.md
pretrained_models/spkrec-ecapa-voxceleb/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
(+1 files in other folders)
