[project]
name = "voicecrm-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.0",
    "numpy>=2.2.0",
    "huggingface-hub>=0.36.0",
    "aiohttp>=3.11.0",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "sounddevice>=0.5.0",
    "sphn>=0.2.1",
    "einops>=0.8.2",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.2.2",
]
